# interface/src/handler/delete_article.rs
@@ -1,5 +1,6 @@
+use crate::auth::check_authorization;
 use crate::error::ApiError;
-use axum::{extract::Path, Extension};
+use axum::{extract::Path, http::HeaderMap, Extension};
 use axum_macros::debug_handler;
 use di::DiContainer;
 use hyper::StatusCode;
@@ -7,9 +8,17 @@ use std::sync::Arc;
 
 #[debug_handler]
 pub async fn delete_article(
+    headers: HeaderMap,
     Path(id_): Path<String>,
     Extension(container): Extension<Arc<DiContainer>>,
 ) -> Result<StatusCode, ApiError> {
+    if check_authorization(headers, &container).await.is_none() {
+        return Err(ApiError {
+            status: StatusCode::UNAUTHORIZED,
+            description: String::from("not authorized"),
+        });
+    };
+
     let usecase = container.usecase_delete_article();
 
     let res = usecase.execute(&id_);
