# interface/src/handler/update_article.rs
@@ -1,5 +1,6 @@
+use crate::auth::check_authorization;
 use crate::error::ApiError;
-use axum::{extract::Path, Extension, Json};
+use axum::{extract::Path, http::HeaderMap, Extension, Json};
 use axum_macros::debug_handler;
 use di::DiContainer;
 use hyper::StatusCode;
@@ -17,10 +18,18 @@ pub struct UpdateArticleRequest {
 
 #[debug_handler]
 pub async fn update_article(
+    headers: HeaderMap,
     Path(id_): Path<String>,
     Json(payload): Json<UpdateArticleRequest>,
     Extension(container): Extension<Arc<DiContainer>>,
 ) -> Result<StatusCode, ApiError> {
+    if check_authorization(headers, &container).await.is_none() {
+        return Err(ApiError {
+            status: StatusCode::UNAUTHORIZED,
+            description: String::from("not authorized"),
+        });
+    };
+
     let usecase = container.usecase_update_article();
 
     let res = usecase.execute(
